# caligner

./: CMakeLists.txt  README.md
examples/: examples.c  examples.py
pyinterface/: __init__.py  alignconfig.py
src/: alignment.c  alignment.h  main.c  minmax.c  minmax.h  overlap.c  overlap.h
tests/: test_naive_overlap.py
